# hemlis

./: Cargo.toml  LICENSE  README.md  gt.sh  rust-toolchains.toml
.github/workflows/: release.yml
hemlis_macros/: Cargo.toml
hemlis_macros/src/: lib.rs
lsp/: Cargo.toml  package-lock.json
lsp/src/: main.rs
purring_macros/: .gitignore  Cargo.toml
purring_macros/src/: lib.rs
src/: ast.rs  grammer.lalrpop  grammer.rs  lexer.rs  main.rs  nr.rs  parser.rs
src/snapshots/: hemlis__lexer__tests__block_comment.snap  hemlis__lexer__tests__char_a.snap  hemlis__lexer__tests__char_hex.snap  hemlis__lexer__tests__empty_string.snap  hemlis__lexer__tests__int_0.snap  hemlis__lexer__tests__lower.snap  hemlis__lexer__tests__number_0.snap  hemlis__lexer__tests__number_2.snap  hemlis__lexer__tests__qual.snap  hemlis__lexer__tests__raw_string_6.snap  hemlis__lexer__tests__simple_int.snap  hemlis__lexer__tests__some_char_special_cases.snap  hemlis__lexer__tests__symbol_paren_minus.snap  hemlis__lexer__tests__symbol_paren_plus.snap  (+236 more)
tests/: 1393682544334918979.purs  2854754188524347351_a.purs  3557299436614490355.purs  4854903533513151981.purs  5820782976307408329.purs  8288197802646519354.purs  9194418368802573651.purs  9241644984828311715.purs  9786701429848908428.purs  comments_dont_duplicate_top_tokens.purs  regression01.purs  regression02.purs  regression03.purs  regression04.purs  regression05.purs  regression06.purs  regression07.purs  regression08.purs  regression09.purs  regression10.purs  regression11.purs  regression12.purs  regression13.purs  regression14.purs
(+20 files in other folders)
