workspace = { members = ["lsp"] }
[package]
name = "purring"
version = "0.1.0"
edition = "2021"

[dependencies]
logos = { version = "0.14.2", features = [] }
rayon = "1.10.0"
dashmap = "6.1.0"
purring_macros = { path = "purring_macros/" }

[dev-dependencies]
insta = "1.40.0"
goldentests = "1.1"

[[bin]]
name = "purring"
path = "src/main.rs"

[lib]
name = "purring_lib"
path = "src/main.rs"

