[package]
name = "hemlis-language-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hemlis = { path = "../." }
dashmap = "6.1.0"
glob = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.78"
sungod = { version = "0.3.1", features = ["default_is_random"] }
tokio = { version = "1.17.0", features = ["full"] }
tower-lsp = { version = "0.20.0", features = ["proposed"]}
